--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^1.23.0
   flutter:
     sdk: flutter
+  get: ^4.6.5
   google_fonts: ^3.0.1
   url_launcher: ^6.1.5
 
